# daily-brief

./: .env.example  .gitignore  README.md  docker-compose.yml
.cursor/rules/: auto-push.mdc
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  settings.py
backend/app/api/: routes.py
backend/app/config/: source_rankings.py  source_rankings.yaml  sources.yaml
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: briefing.py  deduplication.py  ingestion.py  persistence.py  ranking.py  scheduler.py  seed.py  source_connector.py  summarizer.py
backend/app/services/fetchers/: aggregator.py  guardian.py  rss.py  twitter.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: FinanceNews.tsx  Header.tsx  MarketsPanel.tsx  NewsCard.tsx  Panel.tsx  Section.tsx  StartupFunding.tsx  TwitterTracker.tsx
frontend/src/lib/: dashboard.ts  markets.ts
scripts/: dev.sh
